--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,6 +1,6 @@
-WooCommerce モバイルアプリがあれば、注文の管理、販売通知の受領、主要指標の表示など、外出先でいつでもオンライン ストアを管理できます。
-
-注目:これは当社にとって最初のパブリックリリースです。早急かつ頻繁に改善を加えていきたいと考えておりますので、フィードバックや改善点に関する助言をお願いいたします。
-アプリ内の「Support」または ideas.woocommerce.com からご連絡ください。
-
-開発と初期試験にご協力いただきありがとうございます。
+この更新では信頼性を向上させるための修正が行われました。
+- 「My Store」グラフと「Orders & Notifications」画面のローカライズサポートを改善しました。
+- 作成日が翌日以降の日付の注文が非表示になりました(注文リストの「本日」セクションに表示されなくなりました)。
+- 支払いが行われなかった場合の、支払いセクションの支払い方法の概要が削除されました。
+- 金額がゼロでも、支払いと製品の詳細に税の行が表示されるようになりました。
+- ログアウト時、サポートリクエストで使用した資格情報がリセットされるようになりました。
