--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,6 +1,6 @@
-WooCommerce 모바일 앱을 사용하면 어디서나 간편하게 온라인 스토어를 이용할 수 있습니다. 이동 중에도 주문을 관리하고, 판매 알림을 수신하며, 주요 지표를 확인하세요.
-
-Drumroll은 첫 번째 공개 릴리스입니다! 일찍 그리고 자주 반복하기를 기대합니다. 피드백과 개선할 점에 관한 제안을 듣고 싶습니다.
-앱 또는 ideas.woocommerce.com의 '지원'을 통해 문의하세요.
-
-개발 및 초기 테스트에 참여한 모든 분께 감사드립니다.
+- 이 업데이트에서는 신뢰성이 개선되었으며 다음과 같은 수정 사항이 있습니다.
+- 내 스토어 차트와 주문 및 알림 화면의 현지화 지원이 개선되었습니다.
+- 이제는 앱에서 생성된 날짜가 미래에 있는 주문이 숨겨집니다. (더 이상 주문 목록의 “오늘” 섹션 아래에 표시되지 않습니다.)
+- 결제를 받지 못한 경우 결제 섹션에서 결제 수단 요약이 삭제됩니다.
+- 이제는 표시할 금액이 0인 경우에도 결제 및 제품 세부 정보에 세금 행이 표시됩니다.
+- 이제 로그아웃하면 앱에서 지원 요청에 사용한 자격 증명이 초기화됩니다.
