--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,6 +1,6 @@
-С мобильным приложением WooCommerce ваш интернет-магазин помещается в карман: можно управлять заказами, получать уведомления о продажах и просматривать основные показатели даже на ходу.
-
-Барабанная дробь! Это наша первая версия, представленная на суд общественности. Мы хотим как можно скорее устранить все возможные недочеты, поэтому будем рады вашим отзывам и предложениям.
-Связаться с нами можно через вкладку «Поддержка» в приложении или через веб-сайт ideas.woocommerce.com.
-
-Благодарим всех причастных к разработке и тестированию!
+В этом обновлении основное внимание было уделено повышению надежности и исправлению ошибок.
+— Добавлен перевод таблиц в разделе «Мой магазин» и страниц в разделе «Заказы и уведомления».
+— В приложении скрываются заказы, дата формирования которых еще не наступила. (Они больше не отображаются в разделе «Сегодня» в списке заказов.)
+— В разделе платежей больше не отображается список способов оплаты, если нет полученных платежей.
+— В сведениях о продуктах и платежах отображается строчка налогов, даже если сумма налога равна 0.
+— При выходе приложение сбрасывает учетные данные, используемые для обращения в службу поддержки.
