--- a/fastlane/metadata/default/release_notes.txt
+++ b/fastlane/metadata/default/release_notes.txt
@@ -1,6 +1,6 @@
-With the WooCommerce mobile app, you’ve got your online store in your pocket: manage orders, receive sales notifications, and view key metrics on the go.
-
-Drumroll, please: it’s our very first public release! We’re looking forward to iterating early and often and we can’t wait to hear your feedback and improvement suggestions.
-Get in touch via “Support” in the app or at ideas.woocommerce.com.
-
-Thank you to everyone involved in development and early testing!
+- This update is all about improved reliability and fixes:
+- Improved localization support on My Store charts and on the Orders & Notifications screens.
+- The app now hides orders that have a created date listed in the future. (They no longer display under the “Today” section of an order list.)
+- We’ve removed the payment method summary in the payment section when no payment has been received.
+- Taxes line is now shown in payments and product details even when the amount to show is zero.
+- When logging out, the app now resets the credential used with support requests.
