--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,4 +1,4 @@
-- 이 업데이트에서는 신뢰성이 개선되었으며 다음과 같은 수정 사항이 있습니다.
+이 업데이트에서는 신뢰성이 개선되었으며 다음과 같은 수정 사항이 있습니다.
 - 내 스토어 차트와 주문 및 알림 화면의 현지화 지원이 개선되었습니다.
 - 이제는 앱에서 생성된 날짜가 미래에 있는 주문이 숨겨집니다. (더 이상 주문 목록의 “오늘” 섹션 아래에 표시되지 않습니다.)
 - 결제를 받지 못한 경우 결제 섹션에서 결제 수단 요약이 삭제됩니다.
