--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,4 +1,4 @@
-- Deze update draait om verbeterde betrouwbaarheid en bugfixes:
+Deze update draait om verbeterde betrouwbaarheid en bugfixes:
 - Verbeterde ondersteuning van lokalisatie voor de grafieken van Mijn winkel en de schermen Bestellingen en Meldingen.
 - De app verbergt nu bestellingen die een toekomstige aanmaakdatum bevatten. (Ze worden niet meer weergegeven in het gedeelte 'Vandaag' van een bestellijst.)
 - We hebben het overzicht van de betaalmethode verwijderd uit het gedeelte Betalingen wanneer er geen betaling is ontvangen.
