--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,4 @@
 - bugfix: Allows for decimal quantities which some extensions have
 - new feature: quick site select. Navigate to Settings > select row with store website.
 - improvement: Updated the colors of the bars in the charts for better readability
+- bugfix: Log out of the current account right after selecting "Try another account" in store picker
