Update metadata strings

--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -47,14 +47,11 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v1.1-whats-new"
+msgctxt "v1.2-whats-new"
 msgid ""
-"- This update is all about improved reliability and fixes:\n"
-"- Improved localization support on My Store charts and on the Orders & Notifications screens.\n"
-"- The app now hides orders that have a created date listed in the future. (They no longer display under the “Today” section of an order list.)\n"
-"- We’ve removed the payment method summary in the payment section when no payment has been received.\n"
-"- Taxes line is now shown in payments and product details even when the amount to show is zero.\n"
-"- When logging out, the app now resets the credential used with support requests.\n"
+"- Sometimes store stats were inconsistent across different screens. Your stats should be trustworthy, and now they are, with improvements to how store stats they’re displayed.\n"
+"- The best help is help that’s there when you need it, so we added a help button to the Store Picker screen.\n"
+"- You can now view and share application logs. The logs help us track down any issues you might run into, so we can ensure that using the app is smooth and bug-free.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
