--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,5 @@
 - bugfix: Allows for decimal quantities which some extensions have
 - new feature: quick site select. Navigate to Settings > select row with store website.
 - improvement: Updated the colors of the bars in the charts for better readability
+- improvement: Present an error message with an option to retry when adding a note to an order fails
+- improvement: Present an error message with an option to retry when fulfilling an order fails
