Update release notes

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -2,3 +2,5 @@
 - new feature: quick site select. Navigate to Settings > select row with store website.
 - improvement: Updated the colors of the bars in the charts for better readability
 - bugfix: Log out of the current account right after selecting "Try another account" in store picker
+- improvement: Use the store name for the title of the view in "My store" tab
+- improvement: Add analert to let the user know about our new store switcher
